<resources>
    <string name="app_name">DonateSafe</string>
    <string name="donation1">
        The Corona Pandemic has infected a million lives across the world. In India, the situation is escalating. We have the privilege to work from home. We have medical insurances that take care of our emergency medical expenses. However, millions of Indians, those who merely earn Rs. 300 or less, per day cannot afford such luxuries in life. We’re well off and have plenty of food to eat. We hardly realize how many people go hungry and waste food each and every day.
    </string>
    <string name="donation2">
        What about those who can barely afford to eat three square meals a day? What about those who are reliant on medicines and save the little they have for medicines?
    </string>
    <string name="donation3">
        The hospitals are filled with people. It’s a disheartening sight to see hundreds of people sleeping on the pavement, benches, waiting rooms and even under the sheds. Poor people struggle to pay off medical expenses. They can hardly afford to buy food during their stay and often have to sleep on the pavements, benches or waiting rooms. This can be an excruciating experience for a person.
    </string>
    <string name="donation4">
        People living with comforts hardly realize the pain and suffering of the hungry. However, we observe many people living around us not having sufficient food to lead a healthy life, which is the primary right of every human being.
    </string>
    <string name="donation5">
        Mohammed Shujatullah witnessed an incident at a railway station. He saw hundreds of travellers just lying on the platforms and on the roads, starving.
        In his mission to feed the poor and the hungry, he set up a food drive for more than 600 needy people outside hospitals in Hyderabad. With the help of family, friends and kind volunteers, he continues to feed thousands of patients and their loved ones in this time of crisis.
    </string>
    <string name="donation6">
        Hunger is a pain that one cannot explain. It’s leaves a huge gap in your stomach while hampering your mental health. Donate food supplies for the Humanity First Foundation, to help create food kits. These simple food items will help create meals for thousands of starving patients.
    </string>
</resources>
